--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,86 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+/* Custom Checkbox Styles */
+.custom-checkbox {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.custom-checkbox input[type="checkbox"] {
+  display: none;
+}
+
+.custom-checkbox label {
+  position: relative;
+  cursor: pointer;
+  padding-left: 25px;
+  color: black;
+}
+
+.custom-checkbox label:before,
+.custom-checkbox label:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  transition: all 0.3s ease;
+}
+
+.custom-checkbox label:before {
+  width: 22px;
+  height: 22px;
+  background-color: white;
+  border: 2px solid #ffa500; /* Orange border */
+  border-radius: 3px;
+}
+
+.custom-checkbox label:after {
+  width: 6px;
+  height: 15px;
+  border: solid #ffa500; /* Orange tick */
+  border-width: 0 2px 2px 0;
+  top: 3px;
+  left: 8px;
+  transform: scale(0) rotate(45deg);
+}
+
+.custom-checkbox input[type="checkbox"]:checked + label:before {
+  background-color: #ffffff; /* Keep background white when checked */
+  border-color: #ffa500; /* Keep border orange when checked */
+}
+
+.custom-checkbox input[type="checkbox"]:checked + label:after {
+  transform: scale(1) rotate(45deg); /* Display the tick when checked */
+}
+
+/* ----------------------------------------------------- */
+
+/* Navbar Shadow */
+
+#container-nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 200%;
+}
+
+#navBar {
+  position: fixed;
+  width: 100vw;
+  height: 50px;
+  background-color: #dedede;
+  transition: 0.2s;
+  display: flex;
+}
+
+.floatingNav {
+  width: calc(100vh - 100px);
+  border-radius: 2px;
+  box-shadow: 0px 1px 10px red;
+}
+
+/* -------------------------------------------- */
+
+.ant-calendar-picker-input.ant-input {
+  align-items: center;
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
