--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,17 @@
 /* -------------------------------------------- */
 
 .ant-calendar-picker-input.ant-input {
-  align-items: center;
-  text-align: center;
+  /* align-items: center; */
+  /* text-align: center; */
+}
+
+.ant-picker-dropdown {
+  width: fit-content;
+  /* position: absolute; */
+  /* top: 0; */
+  /* right: 3rem; */
+}
+
+.ant-picker-panel-container {
+  /* margin-left: -60px; */
 }
