--- a/src/App.css
+++ b/src/App.css
@@ -99,3 +99,22 @@
 .ant-picker-panel-container {
   /* margin-left: -60px; */
 }
+
+.containerDateRange {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  position: relative;
+}
+
+.calendar {
+  padding: 20px;
+  border: 2px solid gray;
+  cursor: pointer;
+}
+
+.dateRange {
+  position: absolute;
+  top: 120px;
+}
