--- a/src/App.css
+++ b/src/App.css
@@ -81,3 +81,10 @@ span.rdrEndEdge {
 .ant-select {
   width: fit-content;
 }
+
+/* Button */
+
+.ripple-button:hover {
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+/* End Button */
