--- a/src/components/popular/popularDestination.css
+++ b/src/components/popular/popularDestination.css
@@ -40,7 +40,7 @@
 
 @media (min-width: 1080px) {
   .popular-destination {
-    padding-left: 6.5rem;
-    padding-right: 6.5rem;
+    /* padding-left: 6.5rem; */
+    /* padding-right: 6.5rem; */
   }
 }
