--- a/src/components/supplier/supplier.css
+++ b/src/components/supplier/supplier.css
@@ -56,8 +56,12 @@
 @media (max-width: 1440px) {
   .content-tablet {
     display: grid;
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+    grid-template-columns: repeat(5, minmax(0, 1fr));
     /* background: red; */
+  }
+
+  #suppliers-img {
+    padding: 0 !important ;
   }
 }
 @media (max-width: 460px) {
@@ -73,7 +77,7 @@
   border-radius: 0.25rem;
   width: 100%;
   background-color: #ffffff;
-  max-height: 100px;
+  /* max-height: fit-content; */
 }
 
 .img-container-mobile {
@@ -89,4 +93,8 @@
 div.img-container-tablet,
 div.img-container-mobile {
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+
+#suppliers-img {
+  padding: 0.5rem;
 }
